# gedmatch

./: .gitignore  LICENSE  README.md  gedmatch.py  pyproject.toml  review.py
tests/: run_tests.py  test_e2e.py  test_gedmatch.py
tests/fixtures/: A2.ged  B2.ged  bapA.ged  bapB.ged  d2A.ged  d2B.ged  dpA.ged  dpB.ged  dupA.ged  dupB.ged  fullA.ged  fullB.ged  genA.ged  genB.ged  laA.ged  laB.ged  mhA.ged  mhB.ged  opA.ged  opB.ged  phA.ged  phB.ged  st4A.ged  st4B.ged  sxA.ged  sxB.ged  tA.ged  tB.ged  upA.ged  upB.ged  wilA.ged  wilB.ged
